update: add "market value" information

--- a/raw data/crawl_detail.ipynb
+++ b/raw data/crawl_detail.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,9 +54,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Scott Carson',\n",
+       " 'club': 'Manchester City',\n",
+       " 'market_value': '210K €',\n",
+       " 'nationality': 'ENG',\n",
+       " 'birth_date': '3 Sept 1985',\n",
+       " 'age': '38 yrs',\n",
+       " 'height': '188 cm',\n",
+       " 'preferred_foot': 'Right',\n",
+       " 'position': 'G',\n",
+       " 'shirt_number': '33'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_profile_info(url):\n",
     "    response = requests.get(url, headers=headers)\n",
@@ -67,15 +87,18 @@
     "\n",
     "    name_tag = soup.select_one(\"h2.sc-gFqAkR.rPsHj\")\n",
     "    club_tag = soup.select_one(\"div.sc-gFqAkR.cDBfTX\")\n",
+    "\n",
+    "    market_value_tag = soup.select_one(\"div.sc-gFqAkR.cQUimj\")\n",
     "    \n",
     "    info_titles = soup.select(\"div.sc-gFqAkR.crobRI\")\n",
     "    info_values = soup.select(\"div.sc-gFqAkR.jYYdYz\")\n",
     "\n",
-    "    if name_tag is None or club_tag is None or len(info_titles) < 6 or len(info_values) < 6:\n",
+    "    if name_tag is None or club_tag is None or market_value_tag is None or len(info_titles) < 6 or len(info_values) < 6:\n",
     "        return None\n",
     "\n",
     "    name = name_tag.text.strip()\n",
     "    club = club_tag.text.strip()\n",
+    "    market_value = market_value_tag.text.strip()\n",
     "    nationality = info_values[0].find('div').find('span').text.strip()\n",
     "    birth_date = info_titles[1].text.strip()\n",
     "    age = info_values[1].text.strip()\n",
@@ -87,6 +110,7 @@
     "    return {\n",
     "        \"name\": name,\n",
     "        \"club\": club,\n",
+    "        \"market_value\": market_value,\n",
     "        \"nationality\": nationality,\n",
     "        \"birth_date\": birth_date,\n",
     "        \"age\": age,\n",
@@ -96,7 +120,7 @@
     "        \"shirt_number\": shirt_number, \n",
     "    }\n",
     "\n",
-    "# get_profile_info('https://www.sofascore.com/player/tammy-abraham/610766')"
+    "# get_profile_info('https://www.sofascore.com/player/scott-carson/716')"
    ]
   },
   {
