--- a/crawl_data.ipynb
+++ b/crawl_data.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import các thư viện cần thiết cho việc thu thập dữ liệu"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +19,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Khai báo các giá trị đường dẫn hỗ trợ việc thu thập thông tin"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,12 +70,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lấy danh sách các nước trên thế giới cùng hệ số"
+    "### Lấy danh sách các nước trên thế giới cùng hệ số của nước đó"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,22 +99,19 @@
     "      'slug': row['team']['slug'],\n",
     "    })\n",
     "\n",
-    "  create_csv_file(countries, 'country_rankings.csv')\n",
-    "\n",
-    "# scrape_country_rankings()\n",
-    "  "
+    "  create_csv_file(countries, 'country_rankings.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lấy id các nước trong danh sách phân loại"
+    "### Lấy id các nước trong danh sách phân loại các nước"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,9 +132,7 @@
     "    if row['name'] in country_list:\n",
     "      country_rankings.loc[country_rankings['name'] == row['name'], 'category_id'] = row['id']\n",
     "\n",
-    "  create_csv_file(country_rankings, 'country_rankings.csv')\n",
-    "\n",
-    "# scrape_country_category_ids()"
+    "  create_csv_file(country_rankings, 'country_rankings.csv')"
    ]
   },
   {
@@ -135,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,9 +169,7 @@
     "      countries.loc[countries['name'] == row['name'], 'tournament_slug'] = tournament[0]['slug']\n",
     "      countries.loc[countries['name'] == row['name'], 'tournament_id'] = tournament[0]['id']\n",
     "\n",
-    "  create_csv_file(countries, 'country_rankings.csv')\n",
-    "\n",
-    "# scrape_tournament_country()"
+    "  create_csv_file(countries, 'country_rankings.csv')"
    ]
   },
   {
@@ -174,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,9 +203,7 @@
     "      if 'season' in df and len(df['season']) > 0 and 'id' in df['season'][0]:\n",
     "        countries.loc[countries['name'] == row['name'], 'tournament_season_id'] = df['season'][0]['id']\n",
     "\n",
-    "  create_csv_file(countries, 'country_rankings.csv')\n",
-    "\n",
-    "# scrape_tournament_country()"
+    "  create_csv_file(countries, 'country_rankings.csv')"
    ]
   },
   {
@@ -210,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,11 +252,7 @@
     "      })\n",
     "\n",
     "\n",
-    "  create_csv_file(clubs, 'club_tournament.csv')\n",
-    "\n",
-    "    \n",
-    "\n",
-    "# scrape_club_tournament()"
+    "  create_csv_file(clubs, 'club_tournament.csv')"
    ]
   },
   {
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,9 +298,7 @@
     "          })\n",
     "\n",
     "  filename = 'player_links.csv'\n",
-    "  create_csv_file(link_players, filename)\n",
-    "\n",
-    "# scrape_player_links()"
+    "  create_csv_file(link_players, filename)"
    ]
   },
   {
@@ -311,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +318,10 @@
      "output_type": "stream",
      "text": [
       "Failed to fetch club tournament page\n",
-      "Failed to fetch club tournament page\n"
+      "Failed to fetch club tournament page\n",
+      "Failed to fetch club tournament page\n",
+      "Failed to fetch player links page\n",
+      "Failed to fetch player links page\n"
      ]
     }
    ],
@@ -329,7 +331,7 @@
     "scrape_tournament_country()\n",
     "scrape_tournament_season_id()\n",
     "scrape_club_tournament()\n",
-    "# scrape_player_links()"
+    "scrape_player_links()"
    ]
   }
  ],
