--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,18 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries = pd.read_csv('./rawdata/country_rankings.csv')\n",
-    "clubs = pd.read_csv('./rawdata/club_tournament.csv')\n",
-    "players = pd.read_csv('./rawdata/players_data.csv')"
+    "countries = pd.read_csv('./raw_data/country_rankings.csv')\n",
+    "clubs = pd.read_csv('./raw_data/club_tournament.csv')\n",
+    "players = pd.read_csv('./raw_data/players_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "       'Belgium Amateur'], dtype=object)"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "[3 rows x 24 columns]"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "[0 rows x 24 columns]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
        "2        Gastón Verón       1.2M €"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,14 +454,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'K', 'M'}\n"
+      "{'M', 'K'}\n"
      ]
     }
    ],
@@ -477,18 +477,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Chuyển đổi cột giá 'market value' theo giá tương ứng\n",
-    "players['market_value'] = players['market_value'].apply(lambda x: x.split(\" \")[0].replace(\"M\", \"000\"))\n",
-    "players['market_value'] = players['market_value'].apply(lambda x: x.split(\" \")[0].replace(\"K\", \"\"))"
+    "players['market_value'] = players['market_value'].str.replace(' €', '')\n",
+    "players['market_value'] = players['market_value'].apply(lambda x: int(float(x[:-1]) * 1 if x[-1] == 'K' else float(x[:-1]) * 1000))\n",
+    "# players['market_value'] = players['market_value'].astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -520,30 +520,30 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Luciano Gondou</td>\n",
-       "      <td>7.4000</td>\n",
+       "      <td>7400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Maximiliano Romero</td>\n",
-       "      <td>2.5000</td>\n",
+       "      <td>2500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Gastón Verón</td>\n",
-       "      <td>1.2000</td>\n",
+       "      <td>1200</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 name market_value\n",
-       "0      Luciano Gondou       7.4000\n",
-       "1  Maximiliano Romero       2.5000\n",
-       "2        Gastón Verón       1.2000"
+       "                 name  market_value\n",
+       "0      Luciano Gondou          7400\n",
+       "1  Maximiliano Romero          2500\n",
+       "2        Gastón Verón          1200"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
        "2        Gastón Verón  22 yrs"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
        "2        Gastón Verón  22"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
        "2        Gastón Verón  184 cm"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
        "2        Gastón Verón    184"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
        "1               52571.0  "
       ]
      },
-     "execution_count": 143,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
        "1     2     France       FRA  1840.59                     Ligue 1"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
        "1  Atlético Tucumán       CAT         2    atletico-tucuman  36833  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1199,7 @@
        "1  Liga Profesional de Fútbol  Argentina  "
       ]
      },
-     "execution_count": 148,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1265,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1296,7 @@
       " #   Column                      Non-Null Count  Dtype  \n",
       "---  ------                      --------------  -----  \n",
       " 0   name                        11814 non-null  object \n",
-      " 1   market_value                11814 non-null  object \n",
+      " 1   market_value                11814 non-null  int64  \n",
       " 2   club                        11814 non-null  object \n",
       " 3   country                     11814 non-null  object \n",
       " 4   league                      11814 non-null  object \n",
@@ -1317,7 +1317,7 @@
       " 19  aerial                      11814 non-null  int64  \n",
       " 20  avg_score_last_12_months    11814 non-null  float64\n",
       " 21  appearances_last_12_months  11814 non-null  int64  \n",
-      "dtypes: float64(1), int64(11), object(10)\n",
+      "dtypes: float64(1), int64(12), object(9)\n",
       "memory usage: 2.1+ MB\n"
      ]
     }
@@ -1328,16 +1328,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
-    "players[['market_value', 'age', 'height']] = players[['market_value', 'age', 'height']].apply(pd.to_numeric, errors='coerce')"
+    "players[['market_value', 'age', 'height']] = players[['market_value', 'age', 'height']].apply(pd.to_numeric, errors='coerce')\n",
+    "players['market_value'] = players['market_value'].astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1351,7 @@
       " #   Column                      Non-Null Count  Dtype  \n",
       "---  ------                      --------------  -----  \n",
       " 0   name                        11814 non-null  object \n",
-      " 1   market_value                11814 non-null  float64\n",
+      " 1   market_value                11814 non-null  int32  \n",
       " 2   club                        11814 non-null  object \n",
       " 3   country                     11814 non-null  object \n",
       " 4   league                      11814 non-null  object \n",
@@ -1371,8 +1372,8 @@
       " 19  aerial                      11814 non-null  int64  \n",
       " 20  avg_score_last_12_months    11814 non-null  float64\n",
       " 21  appearances_last_12_months  11814 non-null  int64  \n",
-      "dtypes: float64(2), int64(13), object(7)\n",
-      "memory usage: 2.1+ MB\n"
+      "dtypes: float64(1), int32(1), int64(13), object(7)\n",
+      "memory usage: 2.0+ MB\n"
      ]
     }
    ],
@@ -1389,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1415,7 +1416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
